Caracteres de controle

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-# ConfiguraÃ§Ãµes do banco de dados H2 para testes
-#wilson reis fazendo alteraÃ§Ã£o no branch
+# Configurações do banco de dados H2 para testes
+#wilson reis fazendo alteração no branch
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
